refactor(FileSystemStorageTest): Simplify test setup and cleanup